fix horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+#root {
+  width: 100vw;
+  overflow: hidden;
+}
+
+.App {
+  overflow-y: scroll;
+  width: 100%;
+}
+
 * {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
   scroll-behavior: smooth !important;
 }
 
